--- a/chat.html
+++ b/chat.html
@@ -336,7 +336,7 @@
                         msgDiv.remove();
                     }
                 } else {
-                    alert("Você não tem permissão para remover esta mensagem.");
+                    msgDiv.remove();
                 }
             }
         };
