--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div id="registerForm" style="display: none;">
             <input type="email" class="form-control" id="registerEmail" placeholder="Crie o seu e-mail" required>
-            <p id="registerEmailError" class="error-text" style="display: none;">'Por favor, o seu e-mail foi ja foi cadastrado com sucesso, falta definir a sua senha. Clica em "Reenviar o link de definicao de senha" e va imediatamente no seu aplicativo Gmail, abra o link azul que encontras dentro da mensagem, clica nele e definha a sua senha no minimo 6 digitos e clica em Save. NB: Apos ao clicar, se nao abrir um campo para digitar a senha, volte para reenviar o link aqui, porque o link expira quando demorar acessa-lo. Se fazer isso e nao conseguir contacte 863614176 para ser dado suporte.</p>
+            <p id="registerEmailError" class="error-text" style="display: none;">'Por favor, o seu e-mail ja foi cadastrado com sucesso, falta definir a sua senha. Clica em "Reenviar o link de definicao de senha" e va imediatamente no seu aplicativo Gmail, abra o link azul que encontras dentro da mensagem, clica nele e definha a sua senha no minimo 6 digitos e clica em Save. NB: Apos ao clicar, se nao abrir um campo para digitar a senha, volte para reenviar o link aqui, porque o link expira quando demorar acessa-lo. Se fazer isso e nao conseguir contacte 863614176 para ser dado suporte.</p>
 
             <button id="registerBtn" class="btn btn-primary btn-custom" onclick="register()">Cadastrar</button>
             <div class="divider">ou</div>
